--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "clsx": "^2.1.0",
     "envalid": "^8.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "https-proxy-agent": "^7.0.4",
     "lucide-react": "^0.360.0",
     "next": "^14.1.1",
+    "node-fetch": "^3.3.2",
     "pnpm": "^8.15.7",
     "prop-types": "^15.8.1",
     "query-string": "^9.0.0",
